2007-12-07  David Bateman  <dbateman@free.fr>

	* plot/surf.m: Don't set facecolor property.

2007-12-06  John W. Eaton  <jwe@octave.org>

	* plot/print.m: Pass mono to drawnow.
	* plot/drawnow.m: New arg, mono.  Pass it to __go_draw_figure__.
	* plot/__go_draw_figure__.m: New arg, mono.  Pass it to __go_draw_axes.
	* plot/__go_draw_axes__.m: New arg, mono.  If mono is true,
	disable color specifications.

	* general/issymmetric.m: Move tests here from test/test_number.m

2007-12-06  Jason Riedy  <ejr@cs.berkeley.edu>

	* general/issymmetric.m: To keep its argument sparse and the
	function quick, use the infinity norm rather than the 2-norm.
	Also measure the symmetric part rather than the Hermitian part.
	* general/ishermitian.m: New file.  Measure the Hermitian part.
	* general/Makefile.in: Add ishermitian.m to SOURCES.

2007-12-04  John W. Eaton  <jwe@octave.org>

	* plot/__go_draw_axes__.m: Omit "font \"NAME,SIZE\"" in gnuplot
	text and label commands if font is "*".

	* linear-algebra/krylov.m: Doc fixes.
	From Marco Caliari <caliari@sci.univr.it>.

2007-12-04  Kai Habel  <kai.habel@gmx.de>

	* plot/shading.m: Use __plt_get_axis_arg__ for optional axes argument.
	Add "## PKG_ADD: mark_as_command axis" line.

2007-12-03  John W. Eaton  <jwe@octave.org>

	* contour.m, contour3.m, contourc.m, contourf.m, cylinder.m,
	fplot.m, plot3.m, plotyy.m, quiver3.m, scatter.m, scatter3.m,
	slice.m, sombrero.m, stairs.m, stem.m, stem3.m:
	Generate demos from examples.

2007-12-03  David Bateman  <dbateman@free.fr>

	* testfun/test.m: Disable "testif" test block to avoid spurious
	skipped test for "make check". Avoid printing variables for
	skipped tests.

	* testfun/test.m: Add "testif" type to allow for conditional tests.

	* plot/plotyy.m: Use activepositionproperty property of axes
	object. Set second axis color to "none".
	* plot/__go_draw_axes__.m: Respect the activepositionproperty
	property of the axis objects.

2007-12-03  Thomas Treichl  <Thomas.Treichl@gmx.net>
