@@ -23,6 +23,8 @@
 ## See xlabel.
 ## @end deftypefn
 
+## PKG_ADD: mark_as_command ylabel
+
 ## Author: jwe
 
 function retval = ylabel (varargin)
